--- a/site/package.json
+++ b/site/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
+    "glider-js": "^1.7.7",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
